--- a/libcrypto++-5.6.1/debian/control
+++ b/libcrypto++-5.6.1/debian/control
@@ -1,7 +1,7 @@
 Source: libcrypto++
 Section: libs
 Priority: optional
-Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.hu>
+Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.org>
 Standards-Version: 3.9.3
 Build-Depends: debhelper (>= 8), dpkg (>= 1.15.5.6), automake, autoconf, libtool
 Build-Depends-Indep: doxygen
